apps/arr/sabnzbd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
